Korr till rad ca 430 och avslutningen.

--- a/integrationen_i_dalarna.Rmd
+++ b/integrationen_i_dalarna.Rmd
@@ -69,7 +69,7 @@ Senast uppdaterad: `r Sys.Date()`</i>
 
 <ul>
 
-<li>Folkmängden i Dalarna har de senaste tre decennierna varierat mellan 275 tusen som lägst år 2007 och 288 tusen som högst år 2021. Men antalet inrikes födda har stadigt minskat samtidigt som medelåldern har stigit. Med allt fler äldre och allt färre i arbetsför ålder bland inrikes födda har de senaste decenniernas invandring haft en tydlig positiv effekt genom att både bromsa den negativa befolkningsutvecklingen och bidra till en föryngring och därmed arbetskraftsförsörjning.</li>
+<li>Dalarnas inrikes födda befolkning har under de senaste decennierna minskat i antal och fått en förändrad åldersstruktur. Färre i arbetsför ålder ska försörja fler, framförallt äldre, som inte arbetar. De senaste decenniernas invandring har därför haft en tydlig positiv effekt genom att både bromsa den negativa befolkningsutvecklingen och bidra till en föryngring och därmed arbetskraftsförsörjning.</li>
 
 <li>Arbetslösheten bland utrikes födda har historiskt varit högre än bland inrikes födda, men utvecklingen under senare år för utrikes födda visar på en markant positiv utveckling - arbetslösheten bland utrikes födda har nästan halverats sedan år 2020. Med den ökade sysselsättningen ses en positiv utveckling också i form av förbättrad ekonomi, minskad trångboddhet och färre i behov av ekonomiskt stöd bland utrikes födda. Däremot har genomströmningstiden för godkänt i SFI ökat det senaste decenniet, vilket behöver adresseras då språkkunskaperna är viktiga för utbildning och etablering på arbetsmarknaden.</li>
 
@@ -217,7 +217,7 @@ Födelseunderskottet minskade successivt från år 2000 och fram till 2019, för
 
 De senaste årens markanta minskning av födelsetalen är en fråga som förvånar demografer. Det är inte längre en lika tydlig koppling mellan makroekonomiska upp- och nedgångar eller välfärdssystemets utformning och födslar. Nedgången verkar mer vara knuten till oro inför framtiden och påverkar framför allt sannolikheten att skaffa sitt första barn. För en fördjupad genomgång av förändringar i födelsetal, se avsnitt 2.1 i [Befolkningsutvecklingen i Dalarna](https://samhallsanalys.regiondalarna.se/befolkningsutveckling){target="_blank"}^[Befolkningsutvecklingen i Dalarna, Samhällsanalys, Region Dalarna (2025-03-25).].
 
-Förutom att antalet immigranter var stort under framförallt mitten på 2010-talet, har ursprungsländerna förändrats över tid, med ett större antal asylsökande från utomeuropeiska länder. År `r fodelseland_senaste_ar` kan konstateras att det skett omflyttningar av de tio största födelseländerna bland utrikes födda invånare i Sverige. År `r fodelseland_senaste_ar` var `r storsta_fodelseland_senaste_ar` det land som flest invånare i Dalarna var födda i (vid sidan om Sverige). Totalt `r storsta_fodelseland_senaste_ar_antal` invånare i Dalarna hade `r storsta_fodelseland_senaste_ar` som födelseland. Detta är en stor förändring mot 2010, då antalet invånare i Dalarna med Syrien som födelseland kan räknas i låga hundratal. Orsaken till detta är naturligtvis inbördeskriget i Syrien under 2010-talet, när många från landet flydde till Europa och Sverige. Andra länder från vilka invandringen har ökat tydligt under 2000-talet är Somalia och Eritrea. 
+Förutom att antalet immigranter var stort under framförallt mitten på 2010-talet, har ursprungsländerna förändrats över tid, med ett större antal asylsökande från utomeuropeiska länder. År `r fodelseland_senaste_ar` kan konstateras att det skett förändringar i från vilka länder de invandrade kommer. År `r fodelseland_senaste_ar` var `r storsta_fodelseland_senaste_ar` det land som flest invånare i Dalarna var födda i (vid sidan om Sverige). Totalt `r storsta_fodelseland_senaste_ar_antal` invånare i Dalarna hade `r storsta_fodelseland_senaste_ar` som födelseland. Detta är en stor förändring mot 2010, då antalet invånare i Dalarna med Syrien som födelseland kan räknas i låga hundratal. Orsaken till detta är naturligtvis inbördeskriget i Syrien under 2010-talet, när många från landet flydde till Europa och Sverige. Andra länder från vilka invandringen har ökat tydligt under 2000-talet är Somalia och Eritrea. 
 
 Det land som näst flest invånare i Dalarna var födda i år `r fodelseland_senaste_ar` var `r andra_fodelseland_senaste_ar` med `r andra_fodelseland_senaste_ar_antal` invånare. Detta är en tydlig minskning sedan år 2000, när antalet invånare i Dalarna med Finland som födelseland var drygt 6 000. Orsaken till detta är att många invandrade från Finland under åren runt och efter andra världskriget. Dessa börjar således komma upp i åren och eftersom relativt få flyttar till Sverige från Finland idag minskar antalet personer som är födda i Finland i Dalarna stadigt.
 
@@ -261,12 +261,12 @@ gg_antal_utrikes$befolkningsprognos_lan_Dalarna
 Den demografiska översikten visar således att andelen utrikes födda i Dalarna ökat över tid och bidragit till att både föryngra och vidmakthålla länets invånarantal.
 
 # Språk och utbildning
-Ett viktigt steg för att kunna integreras i ett samhälle är att lära sig språket. Språkkunskaper ger förutsättningar för utbildning som i sin tur skapar möjligheter på arbetsmarknaden. I detta avsnitt görs en genomgång av utvecklingen för utrikes födda inom språk och utbildning. I nästa avsnitt diskuteras utvecklingen på arbetsmarknaden
+Ett viktigt steg för att kunna integreras i ett samhälle är att lära sig språket. Språkkunskaper ger förutsättningar för utbildning som i sin tur skapar möjligheter på arbetsmarknaden. I detta avsnitt görs en genomgång av utvecklingen för utrikes födda inom språk och utbildning. I nästa avsnitt diskuteras utvecklingen på arbetsmarknaden.
 
 ## Språk
 Att ha grundläggande kunskaper i det officiella språket är viktigt för att kunna delta i samhället, både socialt, ekonomiskt och kulturellt. För att underlätta integrationen av nyanlända har Sverige ett system för svenskundervisning för invandrare, hädanefter benämnt SFI. SFI är en utbildning som erbjuds till personer som är bosatta i Sverige men saknar sådana grundläggande kunskaper i svenska språket som utbildningen syftar till att ge. Från andra kalenderhalvåret det år hen fyller 16 år har personen rätt till SFI ([Skolverket](https://www.skolverket.se/regler-och-ansvar/ansvar-i-skolfragor/ratt-till-sfi){target="_blank"}).
 
-Vistelsetiden för de personer boende i Dalarna som blivit godkända i SFI har förändrats relativt mycket över tid, men oavsett utbildningsnivå har vistelsetiden ökat över tid. Under några år i slutet på 1990-talet hade de män och kvinnor med förgymnasial utbildning som blivit godkända i SFI varit i Sverige ungefär 1300-1400 dagar (medianvärde). Därefter såväl ökade som minskade vistelsetiden fram till mitten av 2010-talet, innan den ökade tydligt fram till åren runt pandemin (2020-2021). År `r sfi_max_ar` hade de män och kvinnor med förgymnasial utbildning som blev godkända i SFI i Dalarna varit i Sverige i `r sfi_sistaar_varde_forgymnasial` dagar, vilket är ungefär lika länge som de som blev godkända åren innan. För personer med längre utbildningar (gymnasial eller eftergymnasial) är trenden liknande, men vistelsetiden generellt kortare. 
+För de personer boende i Dalarna som blivit godkända i SFI har vistelsetiden i Sverige fram till godkända studier förändrats relativt mycket över tid och på senare tid ökat, oavsett indidivens utbildningsnivå. Under några år i slutet på 1990-talet hade de män och kvinnor med förgymnasial utbildning som blivit godkända i SFI varit i Sverige ungefär 1300-1400 dagar (medianvärde). Därefter såväl ökade som minskade vistelsetiden fram till mitten av 2010-talet, innan den ökade tydligt fram till åren runt pandemin (2020-2021). År `r sfi_max_ar` hade de män och kvinnor med förgymnasial utbildning som blev godkända i SFI i Dalarna varit i Sverige i `r sfi_sistaar_varde_forgymnasial` dagar, vilket är ungefär lika länge som de som blev godkända åren innan. För personer med längre utbildningar (gymnasial eller eftergymnasial) är trenden liknande, men vistelsetiden generellt kortare. 
 
 ```{r, echo = FALSE, message = FALSE, warning = FALSE, fig.height=5, fig.width=8, fig.align='center'}
 gg_SFI$sfi_vistelsetid_tidsserie_Dalarna
@@ -338,7 +338,7 @@ Diagrammet nedan visar att utvecklingen för inrikes födda är relativt opåver
 
 Skillnaderna mellan inrikes och utrikes födda när det gäller högskolebehörighet är inte lika stora som i fallet med gymnasiebehörighet. Fram till 2013 är skillnaden några procentenheter för både kvinnor och män, men därefter faller andelen utrikes födda män med högskolebehörighet till ungefär `r utrikes_behorighet_hog_ar_2021_man` procent år 2021. `r ar_max` kan dock observeras en markant förbättring för männen. För kvinnor är inte nedgången alls lika påtaglig, utan liknar mer den för inrikes födda kvinnor. Sannolikt är detta en effekt av vilka som tagit en gymnasieexamen eller erhållit ett studiebevis.
 
-Det som kan konstateras är dock att `r ar_max` är andelen behöriga inrikes och utrikes födda kvinnor i princip densamma, medan för män är det en högre andel utrikes födda män som är behöriga. Den här utvecklingen verifierar vistelsetidens betydelse för studieresultat och integration. Invandringen från 2015 i kombination med statistikförändringen påverkade behörigheten till högskolan för utrikes födda män under ett antal år, men `r ar_max` är nivån likvärdig med den som rådde för inrikes födda män för tio år sedan. Noterbart är också att oavsett om eleven är utrikes eller inrikes född, är kvinnor i högre utsträckning behöriga till att påbörja högskolestudier än män. 
+Det som kan konstateras är dock att `r ar_max` är andelen behöriga inrikes och utrikes födda kvinnor i princip densamma, medan för män är det en högre andel utrikes födda män som är behöriga. Den här utvecklingen verifierar vistelsetidens betydelse för studieresultat och integration. Invandringen från 2015 i kombination med statistikförändringen påverkade behörigheten till högskolan för utrikes födda män under ett antal år, men `r ar_max` är nivån likvärdig med den som rådde för inrikes födda män för tio år sedan. Noterbart är också att oavsett om eleven är utrikes eller inrikes född, är kvinnor i högre utsträckning än män behöriga till att påbörja högskolestudier. 
 
 # Arbetsmarknad
 I förlängningen av att studera är att arbeta en viktig komponent i integrationen i samhället. Utrikes födda har generellt en svagare ställning på arbetsmarknaden, vilket speglas i att sysselsättningen bland utrikes födda är lägre än bland inrikes födda personer, samt att arbetslösheten, inklusive långtidsarbetslösheten, är högre. Forskning visar att bland annat härkomst, ålder, kön, utbildningsnivå, konjunkturläge, språkkunskaper och kontaktnät är avgörande för utrikes föddas möjligheter att etablera sig på arbetsmarknaden [(IFAU, 2022)](https://www.ifau.se/Press/Forskningssammanfattningar/Utrikes-foddas-eta-pa-arbetsmarknaden-/){target="_blank"}^[IFAU. Utrikes föddas etablering på arbetsmarknaden (2022-11-19).]. Arbetslöshets- och sysselsättningsnivåerna bland utrikes födda varierar dock stort mellan olika grupper.
@@ -358,12 +358,11 @@ SCB:s Arbetskraftsundersökningar (AKU) beskriver utvecklingen på arbetsmarknad
 
 Enligt AKU är en person *sysselsatt* om den under mätveckan har arbetat minst en timme, eller varit tillfälligt frånvarande från ett arbete (semester, tjänstledighet, sjukdom, osv). Även personer som deltar i vissa arbetsmarknadspolitiska program räknas som sysselsatta (lönebidrag, start av näringsverksamhet osv).
 
-Arbetslösa är personer som personer som var utan arbete under mätveckan, men som sökt arbete under de senaste 
-fyra veckorna (mätveckan och tre veckor bakåt) och kunde arbeta mätveckan eller börja inom 14 dagar från mätveckans slut. Arbetslösa omfattar även personer som har fått ett arbete som börjar inom tre månader, förutsatt att de skulle ha kunnat arbeta mätveckan eller börja inom 14 dagar från mätveckans slut.
+Arbetslösa är personer som var utan arbete under mätveckan, men som sökt arbete under de senaste fyra veckorna (mätveckan och tre veckor bakåt) och kunde arbeta mätveckan eller börja inom 14 dagar från mätveckans slut. Arbetslösa omfattar även personer som har fått ett arbete som börjar inom tre månader, förutsatt att de skulle ha kunnat arbeta mätveckan eller börja inom 14 dagar från mätveckans slut.
 
 AKU är en urvalsundersökning som genomförs genom intervjuer och är inte nedbrytbar på finare geografisk nivå än län och storstadsregioner. För att analysera sysselsättning på finare geografisk nivå än vad som finns i AKU kan registerstatistik i form av Befolkningens arbetsmarknadsstatus (BAS) (tidigare Registerbaserad arbetsmarknadsstatistik (RAMS)).
 
-BAS syfte är att redovisa den folkbokförda befolkningen i sex arbetsmarknadsstatusar, Sysselsatta, Arbetslösa, Studerande, Pensionärer, Sjuka samt Övriga. De sysselsatta redovisas i statistiken för åldersgruppen 15–74 år och kan delas upp i anställda och egenföretagare. Sysselsatta definieras genom att man antingen fått lön som utgör underlag för arbetsgivaravgift, som redovisats i AGI eller i förenklad arbetsgivardeklaration. Alternativt att man som företagare redovisat underlag för förväntad moms. Även tillfälligt frånvarande som föräldralediga och sjukskrivna räknas med som sysselsatta, liksom folkbokförda i Sverige som arbetar i annat nordiskt land.
+Syftet med BAS är att redovisa den folkbokförda befolkningen i sex arbetsmarknadsstatusar; Sysselsatta, Arbetslösa, Studerande, Pensionärer, Sjuka samt Övriga. De sysselsatta redovisas i statistiken för åldersgruppen 15–74 år och kan delas upp i anställda och egenföretagare. Sysselsatta definieras genom att man antingen fått lön som utgör underlag för arbetsgivaravgift, som redovisats i AGI eller i förenklad arbetsgivardeklaration. Alternativt att man som företagare redovisat underlag för förväntad moms. Även tillfälligt frånvarande som föräldralediga och sjukskrivna räknas med som sysselsatta, liksom folkbokförda i Sverige som arbetar i annat nordiskt land.
 
 Vid längre jämförelser över tid används både BAS och RAMS.
 
@@ -412,9 +411,9 @@ Arbetslösheten för utrikes födda kvinnor i Dalarna är högst i `r arb_bakgr_
 
 Lägst arbetslöshet bland utrikes födda kvinnor har `r arb_bakgr_utrikes_kvinnor_min` med `r arb_bakgr_utrikes_kvinnor_min_varde` procent, medan arbetslösheten bland utrikes födda män är lägst i `r arb_bakgr_utrikes_män_min ` med `r arb_bakgr_utrikes_män_min_varde` procent. Den grupp av utrikes födda som ligger närmast nivåerna för inrikes födda är födda i Norden. Andelen arbetslösa är väsentligt högre bland personer födda i Asien och Afrika, vilka är två världsdelar från vilka flyktinginvandringen varit stor under det senaste decenniet.
 
-De skillnader i arbetslöshet som observeras kan sannolikt förklaras av skillnader i antalet personer, när i tid som de invandrat till olika kommuner och med vilken utbildningsnivå. En ytterligare dimension som påverkar arbetslösheten är den demografiska utvecklingen med en allt äldre inrikes född befolkning. Arbetskraftsreserven består i allt större grad av utrikes födda och den åldrande inrikes födda befolkningen leder till pensionsavgångar som i sin tur öppnar för utrikes föddas inträde på arbetsmarknaden. Ju bättre rustade de utrikes födda är, desto enklare sker etableringen på arbetsmarknaden. Den allt äldre befolkningen leder även till ökade behov inom bl a vård och omsorg, en bransch där många utrikes födda arbetar idag.
+De skillnader i arbetslöshet som observeras kan sannolikt förklaras av skillnader i mängden personer, när i tid som de invandrat till olika kommuner och med vilken utbildningsnivå. En ytterligare dimension som påverkar arbetslösheten är den demografiska utvecklingen med en allt äldre inrikes född befolkning. Arbetskraftsreserven består i allt större grad av utrikes födda, och den åldrande inrikes födda befolkningen leder till pensionsavgångar som i sin tur öppnar för utrikes föddas inträde på arbetsmarknaden. Ju bättre rustade de utrikes födda är, desto enklare sker etableringen på arbetsmarknaden. Den allt äldre befolkningen leder även till ökade behov inom bl a vård och omsorg, en bransch där många utrikes födda arbetar idag.
 
-För att få en uppfattning om skillnader i arbetslöshet mellan inrikes och utrikes födda, räcker det dock inte med att enbart studera situationen idag, utan även förändringen över tid är av intresse.
+För att få en uppfattning om skillnader i arbetslöshet mellan inrikes och utrikes födda, räcker det dock inte med att enbart studera situationen idag, utan även förändringen över tid är av vikt.
 
 För inrikes födda har arbetslösheten minskat något sedan coronapandemin (2020-2021), men varit relativt stabil på senare år. I `r arbetsloshet_tidsserie_manad` `r arbetsloshet_tidsserie_ar` var arbetslösheten bland inrikes födda `r arbetsloshet_tidserie_Dalarna_inrikes_varde` procent i Dalarna. Bland utrikes födda har arbetslösheten minskat stadigt och markant sedan en topp under pandemin (den var 22,5 procent i juni 2020), men är som sagt klart högre än bland inrikes födda (`r arbetsloshet_tidserie_Dalarna_utrikes_varde` procent i `r arbetsloshet_tidsserie_manad` `r arbetsloshet_tidsserie_ar`). 
 
@@ -801,17 +800,17 @@ Sammantaget är ovanstående trender utan tvekan väldigt positivt för Dalarna.
 
 Det är tydligt att vistelsetid och utbildningsnivå har en stor betydelse för utfallet på integrationsområdet. Inom de flesta områden som studerats i rapporten syns en väldigt tydlig positiv utveckling av utfallet när antingen vistelsetiden ökar och/eller utbildningsnivån höjs.
 
-Det konstaterades inledningsvis att integration är en process där grupper med olika bakgrund ska bli en del av ett socialt, ekonomiskt och kulturellt sammanhang. Det är därför inte förvånande att vistelsetiden har en tydlig roll i att öka integrationen och minska skillnaderna mellan inrikes och utrikes födda. Beroende på individens förutsättningar kommer tiden att integreras i samhället att variera.
+Det konstaterades inledningsvis att integration är en process där grupper med olika bakgrund ska bli en del av ett socialt, ekonomiskt och kulturellt sammanhang. Det är därför inte förvånande att vistelsetiden har en tydlig roll i att öka integrationen och minska skillnaderna mellan inrikes och utrikes födda. Beroende på individens förutsättningar kommer tiden till att integreras i samhället att variera.
 
 När det gäller utbildningsnivån finns det en tydlig skiljelinje mellan individer med endast förgymnasial utbildning och de som har gymnasial eller högre utbildningsnivå. De med endast förgymnasial utbildning har svårare att etablera sig på arbetsmarknaden och behöver längre tid för att bland annat nå godkänt i SFI. Utmaningen för de med endast förgymnasial utbildning gäller dock oavsett om individen är inrikes eller utrikes född, men de utrikes födda har en språklig utmaning att möta. Att lära sig svenska skapar möjligheter för att utbilda sig och etableras på arbetsmarknaden.
 
-Att uppnå godkänt i SFI har det senaste decenniet tagit allt längre tid i genomsnitt, oavsett utbildningsnivå. Sannolikt är det en kombination av det stora tryck som flyktinginvandringen 2016 och framåt medförde, i kombination med coronapandemins påverkan på utbildningsväsendet. Att förbättra genomströmningen i SFI är en mycket viktig del under kommande år för att rusta utrikes födda inför fortsatt utbildning och etablering på arbetsmarknaden.
+Att uppnå godkänt i SFI har det senaste decenniet tagit allt längre tid i genomsnitt, oavsett utbildningsnivå. Sannolikt är det en kombination av det stora tryck som flyktinginvandringen 2015 och framåt medförde, i kombination med coronapandemins påverkan på utbildningsväsendet. Att förbättra genomströmningen i SFI är en mycket viktig del under kommande år för att rusta utrikes födda inför fortsatt utbildning och etablering på arbetsmarknaden.
 
 Även om det skett en positiv utveckling i många delar finns det generella skillnader mellan inrikes och utrikes födda som kan observeras, även när vistelsetiden i Sverige och utbildningsnivån tas i beaktande. Utrikes födda har exempelvis lägre medianinkomster, en högre andel är trångbodda, en högre andel arbetslösa och även långtidsarbetslösa.
 
 De skillnader som observeras förtar inte den övergripande positiva utvecklingen inom de områden som analyserats, men de visar att det finns mer att göra när det kommer till att utnyttja den resurs som utrikes födda är. Vikten av att fortsätta integrationsarbetet är särskilt viktigt för att kompetensförsörja arbetsmarknaden nu och i framtiden. 
 
-De senaste åren har invandringen till länet minskat och antalet utrikes födda i Dalarna har stabiliserats. Samtidigt har Dalarna ett negativt inrikes flyttnetto och låga födelsetal, en kombination som leder till en allt mer åldrad befolkning och utmanar kompetensförsörjningen för näringsliv och offentlig förvaltning framgent. Den demografiska prognosen det kommande decenniet indikerar en minskad befolkning.
+De senaste åren har invandringen till länet minskat och antalet utrikes födda i Dalarna har stabiliserats. Samtidigt har Dalarna ett negativt inrikes flyttnetto och låga födelsetal, en kombination som leder till en allt mer åldrad befolkning och utmanar arbetskrafts- och kompetensförsörjningen för näringsliv och offentlig förvaltning framgent. Den demografiska prognosen det kommande decenniet indikerar en minskad befolkning.
 
 Att säkerställa goda kunskaper i svenska och att lyfta utbildningsnivån för utrikes födda, främst de med endast förgymnasial utbildning, är avgörande för att se en ökad etablering på arbetsmarknaden och en fortsatt positiv utveckling av integrationen av utrikes födda i Dalarna.
 
