--- a/integrationen_i_dalarna.Rmd
+++ b/integrationen_i_dalarna.Rmd
@@ -69,11 +69,11 @@ Senast uppdaterad: `r Sys.Date()`</i>
 
 <ul>
 
-<li>Dalarnas inrikes födda befolkning har under de senaste decennierna minskat i antal och fått en förändrad åldersstruktur. Färre i arbetsför ålder ska försörja fler, framförallt äldre, som inte arbetar. De senaste decenniernas invandring har därför haft en tydlig positiv effekt genom att både bromsa den negativa befolkningsutvecklingen och bidra till en föryngring och därmed arbetskraftsförsörjning.</li>
+<li>Dalarnas inrikes födda befolkning har under de senaste decennierna minskat i antal och fått en förändrad åldersstruktur. Färre i arbetsför ålder ska försörja fler, framförallt äldre, som inte arbetar. De senaste decenniernas invandring har därför haft en tydlig positiv effekt genom att både bromsa den negativa befolkningsutvecklingen och bidra till en föryngring av befolkningen och därmed arbetskraftsförsörjning.</li>
 
-<li>Arbetslösheten bland utrikes födda har historiskt varit högre än bland inrikes födda, men utvecklingen under senare år för utrikes födda visar på en markant positiv utveckling - arbetslösheten bland utrikes födda har nästan halverats sedan år 2020. Med den ökade sysselsättningen ses en positiv utveckling också i form av förbättrad ekonomi, minskad trångboddhet och färre i behov av ekonomiskt stöd bland utrikes födda. Däremot har genomströmningstiden för godkänt i SFI ökat det senaste decenniet, vilket behöver adresseras då språkkunskaperna är viktiga för utbildning och etablering på arbetsmarknaden.</li>
+<li>Arbetslösheten bland utrikes födda har historiskt varit högre än bland inrikes födda, men utvecklingen under senare år för utrikes födda visar på en markant positiv utveckling och har nästan halverats sedan år 2020. Med den ökade sysselsättningen ses en positiv utveckling också i form av förbättrad ekonomi, minskad trångboddhet och färre i behov av ekonomiskt stöd bland utrikes födda. Däremot har genomströmningstiden för godkänt i SFI ökat det senaste decenniet, vilket behöver adresseras då språkkunskaperna är viktiga för utbildning och etablering på arbetsmarknaden.</li>
 
-<li>Faktorer som minskar skillnaderna på arbetsmarknaden mellan utrikes födda och inrikes födda är framförallt höjda utbildningsnivåer och längre vistelsetid i Sverige. Men det finns kvarstående skillnader i form av exempelvis lägre gymnasiebehörigheter, högre arbetslöshet och lägre inkomster.</li>
+<li>Faktorer som minskar skillnaderna på arbetsmarknaden mellan utrikes födda och inrikes födda är framförallt höjda utbildningsnivåer och längre vistelsetid i Sverige. Däremot finns det kvarstående skillnader i form av exempelvis lägre medianinkomster, en högre andel trångbodda, en högre andel arbetslösa och även långtidsarbetslösa.</li>
 
 <li>Sammantaget ses en mycket positiv utveckling i Dalarna, men de kvarstående skillnaderna visar på vikten av ett fortsatt integrationsarbete med fokus på språk, utbildning och arbete för att minska skillnader mellan inrikes och utrikes födda.</li>
 
@@ -118,7 +118,7 @@ Strukturell integration handlar om skyldigheter och rättigheter via samhälleli
 
 Den här rapportens syfte är att redovisa aktuell statistik som kan bidra till förståelsen för utrikes föddas integration i samhället i Dalarna och visa på utvecklingen över tid. Som utgångspunkt finns 2019 års rapport, med anpassningar till dagens situation och kunskapsläge. Rapporten kommer inte att behandla frågor som rör invandringens påverkan på de offentliga finanserna eller utrikes föddas inblandning i brottslighet. För den som är intresserad av att läsa mer om dessa områden rekommenderas rapporter från [Konjunkturinstitutet](https://www.konj.se/media/kpgnt5iw/specialstudie-117-invandrades-nettobidrag-till-de-offentliga-finanserna-1983-2022.pdf){target="_blank"} och [Brottsförebyggande rådet](https://bra.se/rapporter/arkiv/2021-08-25-misstankta-for-brott-bland-personer-med-inrikes-respektive-utrikes-bakgrund){target="_blank"}.
 
-I Region Dalarnas rapport från 2019 konstaterades bland annat att den största skiljelinjen fanns mellan hur väl integrationsprocessen fungerar för gruppen utrikes födda å ena sidan, och inrikes födda å andra sidan oavsett om de inrikes födda har utrikes eller inrikes födda föräldrar. Skillnaden i förutsättningar och förmåga mellan de inrikes födda, oavsett föräldrarnas bakgrund, var relativt liten när det gäller skolresultat och sysselsättningsgrad. Denna rapport belyser därför primärt utrikes födda i jämförelse med inrikes födda. En uppdelning sker även för kvinnor och män i de delar det är relevant, som exempelvis utbildningsnivåer samt vistelsetid i landet. I vissa diagram används även begreppet *Född i Sverige*, vilket ska likställas med inrikes född.
+I Region Dalarnas rapport från 2019 konstaterades bland annat att den största skiljelinjen fanns mellan hur väl integrationsprocessen fungerar för gruppen utrikes födda å ena sidan, och inrikes födda å andra sidan oavsett om de inrikes födda har utrikes eller inrikes födda föräldrar. Skillnaden i förutsättningar och förmåga mellan de inrikes födda, oavsett föräldrarnas bakgrund, var relativt liten när det gäller skolresultat och sysselsättningsgrad. Denna rapport belyser därför primärt utrikes födda i jämförelse med inrikes födda. En uppdelning sker även för kvinnor och män, utbildningsnivåer samt vistelsetid i landet i de delar det är relevant.  I vissa diagram används även begreppet *Född i Sverige*, vilket ska likställas med inrikes född.
 
 # Befolkningsutveckling och invandring
 Sverige är sedan en längre tid inne i en demografisk fas där de stora babyboom-kullarna från slutet av 1940- och början av 1950-talet uppnåt pensionsålder och nästa generation från 1960-talet börjar närma sig pension. Många svenska kommuner har en alltmer ålderstigen befolkning, en effekt av den urbaniseringsvåg som pågått sedan tidigt 1900-tal, då många unga lämnat landsbygden och mindre tätorter till förmån för residens- och universitetsstäder. Förutom att befolkningsutvecklingen medför färre skattebetalare som ska försörja allt fler äldre så innebär den också ett stort arbetskraftsproblem.
@@ -802,15 +802,15 @@ Det är tydligt att vistelsetid och utbildningsnivå har en stor betydelse för 
 
 Det konstaterades inledningsvis att integration är en process där grupper med olika bakgrund ska bli en del av ett socialt, ekonomiskt och kulturellt sammanhang. Det är därför inte förvånande att vistelsetiden har en tydlig roll i att öka integrationen och minska skillnaderna mellan inrikes och utrikes födda. Beroende på individens förutsättningar kommer tiden till att integreras i samhället att variera.
 
-När det gäller utbildningsnivån finns det en tydlig skiljelinje mellan individer med endast förgymnasial utbildning och de som har gymnasial eller högre utbildningsnivå. De med endast förgymnasial utbildning har svårare att etablera sig på arbetsmarknaden och behöver längre tid för att bland annat nå godkänt i SFI. Utmaningen för de med endast förgymnasial utbildning gäller dock oavsett om individen är inrikes eller utrikes född, men de utrikes födda har en språklig utmaning att möta. Att lära sig svenska skapar möjligheter för att utbilda sig och etableras på arbetsmarknaden.
+När det gäller utbildningsnivån finns det en tydlig skiljelinje mellan individer med endast förgymnasial utbildning och de som har gymnasial eller högre utbildningsnivå. De med endast förgymnasial utbildning har svårare att etablera sig på arbetsmarknaden och behöver längre tid för att bland annat nå godkänt i SFI. Utmaningen för de med endast förgymnasial utbildning gäller dock oavsett om individen är inrikes eller utrikes född, men de utrikes födda har en språklig utmaning att möta. Att lära sig svenska skapar möjligheter för att i förlängningen utbilda sig och etablera sig på arbetsmarknaden.
 
 Att uppnå godkänt i SFI har det senaste decenniet tagit allt längre tid i genomsnitt, oavsett utbildningsnivå. Sannolikt är det en kombination av det stora tryck som flyktinginvandringen 2015 och framåt medförde, i kombination med coronapandemins påverkan på utbildningsväsendet. Att förbättra genomströmningen i SFI är en mycket viktig del under kommande år för att rusta utrikes födda inför fortsatt utbildning och etablering på arbetsmarknaden.
 
-Även om det skett en positiv utveckling i många delar finns det generella skillnader mellan inrikes och utrikes födda som kan observeras, även när vistelsetiden i Sverige och utbildningsnivån tas i beaktande. Utrikes födda har exempelvis lägre medianinkomster, en högre andel är trångbodda, en högre andel arbetslösa och även långtidsarbetslösa.
+Även om det skett en positiv utveckling i många delar finns det generella skillnader mellan inrikes och utrikes födda som kan observeras, även när vistelsetiden i Sverige och utbildningsnivån tas i beaktande. Utrikes födda har exempelvis lägre medianinkomster, en högre andel är trångbodda, lägre valdeltagande, en högre andel arbetslösa och även långtidsarbetslösa.
 
-De skillnader som observeras förtar inte den övergripande positiva utvecklingen inom de områden som analyserats, men de visar att det finns mer att göra när det kommer till att utnyttja den resurs som utrikes födda är. Vikten av att fortsätta integrationsarbetet är särskilt viktigt för att kompetensförsörja arbetsmarknaden nu och i framtiden. 
+De skillnader som observeras förtar inte den övergripande positiva utvecklingen inom de områden som analyserats, men de visar samtidigt att det finns mer att göra när det kommer till att utnyttja den resurs som utrikes födda är. Vikten av att fortsätta integrationsarbetet är särskilt viktigt för att kompetensförsörja arbetsmarknaden nu och i framtiden. 
 
-De senaste åren har invandringen till länet minskat och antalet utrikes födda i Dalarna har stabiliserats. Samtidigt har Dalarna ett negativt inrikes flyttnetto och låga födelsetal, en kombination som leder till en allt mer åldrad befolkning och utmanar arbetskrafts- och kompetensförsörjningen för näringsliv och offentlig förvaltning framgent. Den demografiska prognosen det kommande decenniet indikerar en minskad befolkning.
+De senaste åren har invandringen till länet minskat och antalet utrikes födda i Dalarna har stabiliserats. Samtidigt har Dalarna ett negativt inrikes flyttnetto och låga födelsetal, en kombination som leder till en allt mer åldrad befolkning och utmanar arbetskrafts- och kompetensförsörjningen för näringsliv och offentlig förvaltning framgent. Den demografiska prognosen för det kommande decenniet indikerar en minskad befolkning.
 
 Att säkerställa goda kunskaper i svenska och att lyfta utbildningsnivån för utrikes födda, främst de med endast förgymnasial utbildning, är avgörande för att se en ökad etablering på arbetsmarknaden och en fortsatt positiv utveckling av integrationen av utrikes födda i Dalarna.
 
